--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "Real-time Bitcoin transactions visualization",
   "private": true,
   "scripts": {
-    "start": "serve .",
-    "build": "echo 'No build step needed'"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
-    "serve": "^14.2.1"
+    "next": "^13.5.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 } 
